--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.1000.2",
     "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
+    "@types/jquery": "^3.5.0",
+    "bootstrap": "^4.5.0",
+    "easy-pie-chart": "^2.1.7",
+    "http-server": "^0.12.3",
+    "jquery": "^3.5.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
